[project]
name = "linkqueue"
version = "0.1.0"
description = "Server-side capture queue for the Obsidian link-triage pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
    "pydantic-ai-slim[openai]>=0.4",
    "beautifulsoup4>=4.12",
]

[project.scripts]
obs_triage = "agent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "agent"]
